Fix: Banner fit on mobile screen

--- a/src/styles/delorean.scss
+++ b/src/styles/delorean.scss
@@ -129,5 +129,6 @@
   border: 0;
   vertical-align: middle;
   display: inline-block;
+  max-width: 100%;
 }
 
